Rename Amendment -> Modification

--- a/alcs-frontend/src/app/features/application/decision/decision.component.html
+++ b/alcs-frontend/src/app/features/application/decision/decision.component.html
@@ -17,16 +17,16 @@
   <div
     class="decision"
     [ngClass]="{
-      'has-post-decisions': decision.amendedBy?.length || decision.reconsideredBy?.length
+      'has-post-decisions': decision.modifiedBy?.length || decision.reconsideredBy?.length
     }"
   >
-    <div *ngIf="decision.amendedBy?.length || decision.reconsideredBy?.length" class="post-decisions body1-text">
+    <div *ngIf="decision.modifiedBy?.length || decision.reconsideredBy?.length" class="post-decisions body1-text">
       <div>
         <strong>Modified&nbsp;By:&nbsp;</strong>
-        <ng-container *ngFor="let amend of decision.amendedBy">
-          {{amend.linkedResolutions.join(', ')}}
+        <ng-container *ngFor="let modification of decision.modifiedBy">
+          {{modification.linkedResolutions.join(', ')}}
         </ng-container>
-        <span *ngIf="!decision.amendedBy?.length">N/A</span>
+        <span *ngIf="!decision.modifiedBy?.length">N/A</span>
       </div>
       <div>
         <strong>Reconsidered&nbsp;By:&nbsp;</strong>
@@ -52,45 +52,48 @@
       <div class="body-large">
         Decision #{{ decisions.length - i }} - Res #{{ decision.resolutionNumber }}/{{ decision.resolutionYear }}
       </div>
-      <div>
-        <div class="subheading2">Decision Outcome</div>
-        {{ decision.outcome.label }} {{ decision.amends?.linkedResolutions?.join(', ') }}
-        {{ decision.reconsiders?.linkedResolutions?.join(', ') }}
-      </div>
-      <div></div>
-      <div>
-        <div class="subheading2">Decision Maker</div>
-        {{ decision.decisionMaker ? decision.decisionMaker.label : '(Unset)' }}
-      </div>
-      <div>
-        <ng-container *ngIf="decision.ceoCriterion">
-          <div class="subheading2">CEO Criterion</div>
+      <div class="decision-content">
+        <div>
+          <div class="subheading2">Decision Date</div>
+          {{ decision.date | momentFormat }}
+        </div>
+        <div>
+          <div class="subheading2">Decision Outcome</div>
+          {{ decision.outcome.label }} {{ decision.modifies?.linkedResolutions?.join(', ') }}
+          {{ decision.reconsiders?.linkedResolutions?.join(', ') }}
+        </div>
+        <div></div>
+        <div>
+          <div class="subheading2">Decision Maker</div>
+          {{ decision.decisionMaker ? decision.decisionMaker.label : '(Unset)' }}
+        </div>
+        <div>
+          <div *ngIf="decision.ceoCriterion" class="subheading2">CEO Criterion</div>
           {{ decision.ceoCriterion?.label }}
-          <ng-container *ngIf="decision.isTimeExtension !== null">
+          <ng-container *ngIf="decision.isTimeExtension">
             {{ decision.isTimeExtension ? '- Time extension' : '- Other' }}
           </ng-container>
-        </ng-container>
-      </div>
-      <div></div>
-      <div *ngIf="decision.chairReviewRequired">
-        <div class="subheading2">Chair Review Date</div>
-        <span *ngIf="!decision.chairReviewDate">
+        </div>
+        <div></div>
+        <div *ngIf="decision.chairReviewRequired">
+          <div class="subheading2">Chair Review Date</div>
+          <span *ngIf="!decision.chairReviewDate">
           <app-inline-datepicker (save)="onSaveChairReviewDate(decision.uuid, $event)"></app-inline-datepicker>
         </span>
-        <span *ngIf="decision.chairReviewDate">{{ decision.chairReviewDate | momentFormat }}</span>
-      </div>
-      <div *ngIf="decision.chairReviewRequired">
-        <div class="subheading2">Chair Review Outcome</div>
-        <span *ngIf="decision.chairReviewOutcome !== null">{{
-          decision.chairReviewOutcome ? 'Reconsider' : 'Stay'
-        }}</span>
-        <span *ngIf="decision.chairReviewOutcome === null">(Unset)</span>
-      </div>
-      <div *ngIf="decision.chairReviewRequired"></div>
-      <div>
-        <div class="subheading2">Audit Date</div>
-        <span *ngIf="decision.auditDate">{{ decision.auditDate | momentFormat }}</span>
-        <span *ngIf="!decision.auditDate">
+          <span *ngIf="decision.chairReviewDate">{{ decision.chairReviewDate | momentFormat }}</span>
+        </div>
+        <div *ngIf="decision.chairReviewRequired">
+          <div class="subheading2">Chair Review Outcome</div>
+          <span *ngIf="decision.chairReviewOutcome !== null">{{
+            decision.chairReviewOutcome ? 'Reconsider' : 'Stay'
+            }}</span>
+          <span *ngIf="decision.chairReviewOutcome === null">(Unset)</span>
+        </div>
+        <div *ngIf="decision.chairReviewRequired"></div>
+        <div>
+          <div class="subheading2">Audit Date</div>
+          <span *ngIf="decision.auditDate">{{ decision.auditDate | momentFormat }}</span>
+          <span *ngIf="!decision.auditDate">
           <app-inline-datepicker (save)="onSaveAuditDate(decision.uuid, $event)"></app-inline-datepicker>
         </span>
         </div>
@@ -126,4 +129,5 @@
         </ng-container>
       </div>
     </div>
+  </div>
 </section>
