--- a/alcs-frontend/src/app/features/application/post-decision/post-decision.component.scss
+++ b/alcs-frontend/src/app/features/application/post-decision/post-decision.component.scss
@@ -67,7 +67,7 @@ section {
     background: $accent-color;
   }
 
-  &.amendment {
+  &.modification {
     background: $secondary-color-dark;
   }
 
