--- a/alcs-frontend/src/app/features/application/decision/decision.component.scss
+++ b/alcs-frontend/src/app/features/application/decision/decision.component.scss
@@ -46,7 +46,7 @@ section {
     background: $accent-color;
   }
 
-  &.amendment {
+  &.modification {
     background: $secondary-color-dark;
   }
 }
