--- a/alcs-frontend/src/app/features/board/dialogs/modification/modification-dialog.component.html
+++ b/alcs-frontend/src/app/features/board/dialogs/modification/modification-dialog.component.html
@@ -7,26 +7,26 @@
   <div class="header-row">
     <div class="left">
       <h3 class="card-title">
-        {{ amendment.application.fileNumber }} ({{ amendment.application.applicant }})
+        {{ modification.application.fileNumber }} ({{ modification.application.applicant }})
         <span
           class="center application-type"
           [ngStyle]="{
-            backgroundColor: amendment.application.type.backgroundColor,
-            color: amendment.application.type.textColor,
-            borderColor: amendment.application.type.backgroundColor
+            backgroundColor: modification.application.type.backgroundColor,
+            color: modification.application.type.textColor,
+            borderColor: modification.application.type.backgroundColor
           }"
         >
-          {{ amendment.application.type.label }}
+          {{ modification.application.type.label }}
         </span>
         <span
           class="center application-type"
           [ngStyle]="{
-            backgroundColor: amendmentType.backgroundColor,
-            color: amendmentType.textColor,
-            borderColor: amendmentType.borderColor
+            backgroundColor: modificationType.backgroundColor,
+            color: modificationType.textColor,
+            borderColor: modificationType.borderColor
           }"
         >
-          {{ amendmentType.label }}
+          {{ modificationType.label }}
         </span>
       </h3>
     </div>
@@ -35,7 +35,7 @@
         color="accent"
         mat-flat-button
         [mat-dialog-close]="isDirty"
-        [routerLink]="['application', amendment.application.fileNumber]"
+        [routerLink]="['application', modification.application.fileNumber]"
       >
         View Detail
       </button>
@@ -43,14 +43,14 @@
   </div>
   <div>
     <span class="region"
-      >{{ amendment.application.localGovernment.name }} - {{ amendment.application.region.label }} Region</span
+      >{{ modification.application.localGovernment.name }} - {{ modification.application.region.label }} Region</span
     >
   </div>
   <div class="header-row">
     <div class="left"></div>
     <div style="margin-right: -16px" class="right">
       <button
-        [matTooltip]="amendment.card.highPriority ? 'Remove Priority' : 'Add Priority'"
+        [matTooltip]="modification.card.highPriority ? 'Remove Priority' : 'Add Priority'"
         class="toggle-priority"
         (click)="onTogglePriority()"
         mat-icon-button
@@ -58,8 +58,8 @@
         <div
           class="priority"
           [ngClass]="{
-            'filled-priority': amendment.card.highPriority,
-            'empty-priority': !amendment.card.highPriority
+            'filled-priority': modification.card.highPriority,
+            'empty-priority': !modification.card.highPriority
           }"
         ></div>
       </button>
@@ -106,9 +106,9 @@
     </ng-select>
   </div>
   <div class="subtasks-wrapper">
-    <app-subtasks [cardUuid]="amendment.card.uuid"></app-subtasks>
+    <app-subtasks [cardUuid]="modification.card.uuid"></app-subtasks>
   </div>
   <div class="card-comments-wrapper">
-    <app-comments [cardUuid]="amendment.card.uuid"></app-comments>
+    <app-comments [cardUuid]="modification.card.uuid"></app-comments>
   </div>
 </mat-dialog-content>
