--- a/alcs-frontend/src/app/features/application/review/decision-meeting/decision-meeting.component.html
+++ b/alcs-frontend/src/app/features/application/review/decision-meeting/decision-meeting.component.html
@@ -5,7 +5,7 @@
     <h4>Discussion Schedule</h4>
   </div>
   <div class="pull-right">
-    <button mat-flat-button color="primary" class="pull-right" (click)="onCreate()">+ New meeting</button>
+    <button mat-flat-button color="primary" class="pull-right" (click)="onCreate()">+ New Discussion</button>
   </div>
 </div>
 
