--- a/alcs-frontend/src/app/shared/header/header.component.html
+++ b/alcs-frontend/src/app/shared/header/header.component.html
@@ -13,7 +13,7 @@
           </a>
         </div>
         <div *ngIf="hasRoles && !isCommissioner">
-          <a routerLink="/meeting">
+          <a routerLink="/schedule">
             <button class="menu-item">Schedule</button>
           </a>
         </div>
