Rename dateReceived -> dateSubmittedToAlc

--- a/alcs-frontend/src/app/features/application/intake/intake.component.html
+++ b/alcs-frontend/src/app/features/application/intake/intake.component.html
@@ -3,8 +3,8 @@
   <div>
     <div class="subheading2">Submitted to ALC</div>
     <app-inline-datepicker
-    [selectedValue]="application?.dateReceived"
-    (save)="updateApplication('dateReceived', $event)"
+    [selectedValue]="application?.dateSubmittedToAlc"
+    (save)="updateApplication('dateSubmittedToAlc', $event)"
   ></app-inline-datepicker>
   </div>
   <div>
