--- a/alcs-frontend/src/styles.scss
+++ b/alcs-frontend/src/styles.scss
@@ -271,3 +271,12 @@ mat-button-toggle-group {
   word-break: keep-all !important;
   max-width: unset !important;
 }
+
+.ng-select.ng-select-disabled .ng-select-container.ng-appearance-outline:hover:after {
+  border: solid 1px rgba(0, 0, 0, 0.12);
+}
+
+// removes dotted line at the top of disabled select
+.ng-select.ng-select-disabled .ng-select-container:after {
+  background-image: none;
+}
