Change Time Extention or Other to Multi-select
* User can now select either or both, one must be selected
* Update form control to use multi select instead of toggle group
* Add new column is_other to track new boolean
* Add more tests to application controller to improve coverage

--- a/alcs-frontend/src/app/features/application/decision/decision-dialog/decision-dialog.component.scss
+++ b/alcs-frontend/src/app/features/application/decision/decision-dialog/decision-dialog.component.scss
@@ -57,3 +57,10 @@ label {
     top: 0;
   }
 }
+
+.criterion-checkbox {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 10px;
+  padding: 6px;
+}
