--- a/alcs-frontend/src/app/features/application/decision/decision-dialog/decision-dialog.component.html
+++ b/alcs-frontend/src/app/features/application/decision/decision-dialog/decision-dialog.component.html
@@ -85,6 +85,7 @@
         bindValue="code"
         placeholder="CEO Criterion *"
         [clearable]="false"
+        (change)="onSelectCeoCriterion($event)"
       >
         <ng-template ng-option-tmp let-item="item">
           <span>{{ item.number }} - {{ item.label }} </span>
@@ -93,13 +94,13 @@
           <span>{{ item.number }} - {{ item.label }} </span>
         </ng-template>
       </ng-select>
-      <div *ngIf="form.get('ceoCriterion')!.value === 'MODI'" class="full-width">
-        <mat-label class="toggle-label">Criterion 8 Modification</mat-label>
-        <mat-button-toggle-group id="isTimeExtension" formControlName="isTimeExtension" name="isTimeExtension">
-          <mat-button-toggle value="true">Time extension</mat-button-toggle>
-          <mat-button-toggle value="false">Other</mat-button-toggle>
-        </mat-button-toggle-group>
-      </div>
+      <mat-form-field *ngIf="form.get('ceoCriterion')!.value === 'MODI'" appearance="outline" class="full-width">
+        <mat-label>Criterion 8 Modification</mat-label>
+        <mat-select formControlName="criterionModification" multiple>
+          <mat-option value="isTimeExtension">Time Extension</mat-option>
+          <mat-option value="isOther">Other</mat-option>
+        </mat-select>
+      </mat-form-field>
       <mat-form-field appearance="outline" class="date-picker">
         <mat-label>Audit Date</mat-label>
         <input
